--- a/_portfolio/2-noise-seperation-partial-discharge-detection.html
+++ b/_portfolio/2-noise-seperation-partial-discharge-detection.html
@@ -1,6 +1,7 @@
 ---
 title: "Noise Separation and Discriminative Feature Learning for Partial Discharge Recognition"
 excerpt: "<img src='/images/fig_noise_seperation_overall_framework_k.png'><br/>Overall framework of the proposed noise separation and DFL for PD recognition. Time-series signals are first clustered to separate different-source signals. The clustering results are then used to generate sub-PRPD patterns which further train the proposed PD recognition network."
+selected: true
 collection: portfolio
 ---
 
